Fixed overflow issue

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -17,6 +17,7 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 html {
   height: 100%;
 }
@@ -36,11 +37,17 @@ body {
   -webkit-text-size-adjust: 100%;
   backface-visibility: hidden;
   -webkit-overflow-scrolling: touch;
+  overflow: hidden;
 }
 
 ::selection {
   background: rgba(0,0,0,0.7);
   color: #fff;
+}
+
+.content {
+  flex: 1;
+  overflow-y: auto;
 }
 
 .left {
@@ -64,7 +71,6 @@ body {
   display: inline-block;
 }
 
-
 #app {
   width: 100%;
   height: 100%;
@@ -83,7 +89,6 @@ body {
   background: $color-white;
   border-top: 1px solid $color-border;
 }
-
 
 .VueTables.VueTables--client {
   .VueTables__search {
